samples/_failures_safe/1761509149_d2199a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe786f7e.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_fe786f7e.c:162:16: error: missing terminating " character
  162 |         printf("Buffer: %.*s
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_fe786f7e.c:162:9: error: expected expression at end of input
  162 |         printf("Buffer: %.*s
      |         ^~~~~~
./samples/SAFE/__tmp_fe786f7e.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe786f7e.c:162:9: error: expected declaration or statement at end of input
